# filebak

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
documents/: DataBackupSoftware.mdj
include/: aes.h  argparser.h  compressor.h  filebase.h  filter.h  packer.h  task.h
src/: aes.cpp  argparser.cpp  compressor.cpp  filebak.cpp  filebase.cpp  filter.cpp  packer.cpp  task.cpp
test/: filetest.pak.cps.ept  readme.md  test_aes.cpp  test_compressor.cpp  test_eof.cpp  test_filebase.cpp  test_filter.cpp  test_link.cpp  test_packer.cpp  test_path.cpp  test_task.cpp
